@@ -38,6 +38,8 @@
 <p>2016-03-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/xcf.c (load_tile): Fix SourceForge bug #337
+&quot;heap-buffer-overflow in coders/xcf.c:373&quot;.</li>
 <li>coders/pict.c (WritePICTImage): Fix SourceForge bug #340
 &quot;out-of-bounds write in coders/pict.c:1929&quot;.</li>
 <li>coders/pdb.c (WritePDBImage): Fix SourceForge bug #348
